# files-sync-cpp

./: CMakeLists.txt  README.md  SyncFile.json  json_test.cpp  main.cpp  main_old.cpp  sync_file.json  test.cpp
FilesHandler/: FIlesHandler.cpp  FilesHandler.h
FilesSynchronizer/: FilesSynchronizer.cpp  FilesSynchronizer.h
FilesSynchronizerApp/: FilesSynchronizerApp.cpp  FilesSynchronizerApp.h
Google_tests/: CMakeLists.txt  FilesHandlerTTests.cpp  FilesSynchronizerTests.cpp  SyncJsonTests.cpp
SyncJSON/: SyncJSON.cpp  SyncJSON.h
UpdateData/: UpdateData.cpp  UpdateData.h
files_synchronizer_app/: FilesSynchronizerApp.cpp  FilesSynchronizerApp.h
files_synchronizer_lib/file_handler/: FileHandler.cpp  FileHandler.h  FilesHandler.cpp  FilesHandler.h  file_handler.cpp  file_handler.h
files_synchronizer_lib/files_synchronizer/: files_synchronizer.cpp  files_synchronizer.h
files_synchronizer_lib/modification_event/: ModificationEvent.cpp  ModificationEvent.h  modification_event.cpp  modification_event.h
files_synchronizer_lib/sync_file/: SyncFile.cpp  SyncFile.h  sync_file.cpp  sync_file.h
files_synchronizer_lib/update_info/: update_info.cpp  update_info.h
files_synchronizer_lib/who_enum/: who_enum.cpp  who_enum.h
google_test/: CMakeLists.txt  file_synchronizer_lib_unit_test.cpp  test1.cpp
